changed issue template 2022

--- a/.github/ISSUE_TEMPLATE/brainhack-project-template-2022-2.yml
+++ b/.github/ISSUE_TEMPLATE/brainhack-project-template-2022-2.yml
@@ -1,4 +1,4 @@
-name: Project submission template
+name: Brainhack Project Template 2022
 
 # See the json schema to help you create / update this form
 # https://json.schemastore.org/github-issue-forms.json
