fix for project cover images

--- a/assets/data/projects_2026.json
+++ b/assets/data/projects_2026.json
@@ -14,7 +14,7 @@
     "skills": "- Python coding (basic)",
     "good_first_issues": "1. issue one:  Read the documentation of the Frites toolbox https://brainets.github.io/frites/\n2. issue two:  Read the documentation of the HOI toolbox https://brainets.github.io/hoi/\n3. issue three: Read the documentation and install Braina https://github.com/brainets/braina\n4. issue four: Format your data to be readable by Frites or HOI\n5. issue five: Prepare a research question you would like to address",
     "num_collaborators": "5-7",
-    "image": "<img width=\"1248\" height=\"832\" alt=\"Image\" src=\"https://github.com/user-attachments/assets/303c9b8d-27ff-4cc2-a370-7953c7e5bfe7\" />",
+    "image": "https://github.com/user-attachments/assets/303c9b8d-27ff-4cc2-a370-7953c7e5bfe7",
     "type": "other",
     "development_status": "0_concept_no_content",
     "topics": "information_theory\nsignal processing\nnetwork science\ncoding\nAI agents",
@@ -45,7 +45,7 @@
     "skills": "- Python programming (50%): PsychoPy, pandas, numpy, scipy\n- Web development (20%): HTML/JavaScript for online experiments\n- Speech processing (15%): Understanding of acoustic features, embeddings\n- Data analysis (15%): Statistical methods, inter-rater reliability",
     "good_first_issues": "1. Test the desktop experiment and provide feedback on instructions clarity\n2. Help implement data visualization for pilot results\n3. Review and improve documentation\n4. Test the web version across different browsers\n5. Assist with data preprocessing scripts",
     "num_collaborators": "5-7",
-    "image": "<img width=\"1024\" height=\"1024\" alt=\"Image\" src=\"https://github.com/user-attachments/assets/bb49afbf-b5cc-4d2e-8191-88157c1f05e3\" />",
+    "image": "https://github.com/user-attachments/assets/bb49afbf-b5cc-4d2e-8191-88157c1f05e3",
     "type": "method_development",
     "development_status": "1_basic structure",
     "topics": "hypothesis_testing",
@@ -107,7 +107,7 @@
     "skills": "- basic python coding skills\n- git basics\nbut do not worry we aren't experts either",
     "good_first_issues": "- https://www.youtube.com/watch?v=nLu4n7yNGdk\n- https://www.youtube.com/watch?v=qwJNeq-WABU\n- https://distill.pub/2020/growing-ca/",
     "num_collaborators": "3-5",
-    "image": "![Image](https://github.com/user-attachments/assets/b9e4ab36-8e57-4a43-b910-58f0e6df47fe)",
+    "image": "https://github.com/user-attachments/assets/b9e4ab36-8e57-4a43-b910-58f0e6df47fe",
     "type": "coding_methods",
     "development_status": "0_concept_no_content",
     "topics": "other",
@@ -138,7 +138,7 @@
     "skills": "- ready to have fun\n- like to share ideas and views \n- python coding, eventually\n- interest in surface processing for neuroimaging",
     "good_first_issues": "You might have a look at our issues:\nhttps://github.com/brain-slam/slam/issues",
     "num_collaborators": "more",
-    "image": "![Image](https://github.com/user-attachments/assets/5e56a774-a210-4292-9cef-121338ec66f4)",
+    "image": "https://github.com/user-attachments/assets/5e56a774-a210-4292-9cef-121338ec66f4",
     "type": "method_development",
     "development_status": "2_releases_existing",
     "topics": "other",
